# fastapi-car-api

./: .gitignore  Dockerfile  Dockerfile.mkdocs  README.md  skaffold.yaml
car_api/models/: users.py
car_api/schemas/: users.py
docs/: guidelines.md  index.md  release_notes.md  tests.md
fast_master/car_api/: .coverage  car.db  mkdocs.yml  pyproject.toml
fast_master/car_api/car_api/: app.py
fast_master/car_api/car_api/core/: database.py  security.py  settings.py
fast_master/car_api/car_api/models/: __init__.py  cars.py  users.py
fast_master/car_api/car_api/routers/: auth.py  brands.py  cars.py  users.py
fast_master/car_api/car_api/schemas/: cars.py  users.py
fast_master/car_api/docs/: api_endpoints.md  index.md
fast_master/car_api/migrations/: env.py
fast_master/car_api/tests/: conftest.py  test_db.py
fast_master/examples/: async.py  pydantic.py  pyproject.toml  sync.py  type_hints.py
kubernetes/charts/car-api/: Chart.yaml  values-local.yaml  values.yaml
kubernetes/charts/car-api/templates/: NOTES.txt  _helpers.tpl  deployment-mkdocs.yaml  deployment.yaml  httproute.yaml  job-migrations.yaml  secret.yaml  service-mkdocs.yaml
kubernetes/charts/car-api/templates/tests/: test-connection.yaml
kubernetes/kind/: config.yaml
kubernetes/local/: car-api-mkdocs.yaml  car-api.yaml  gateway-api.yaml  migrations.yaml  namespace.yaml  postgres.yaml  secret.yaml
kubernetes/local/kong/: values.yaml
migrations/versions/: 096e8a994744_create_users_table.py  541cc8d0ccc1_create_card_and_brand_tables.py
