[project]
name = "examples"
version = "0.1.0"
description = ""
authors = [
    {name = "lphillipe",email = "luisphillipe200@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
